--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
                         <h1 class="bg-primary">FUN-ECMへようこそ！</h1>
                         <h3 class="container-fluid">私たちは、公立はこだて未来大学の講義の一つであるシステム情報科学実習のグループの一つです。<br>FUNとは未来大学のことであり、ECMとはElliptic Curve Method(楕円曲線法)の略です。<br><br>このサイトでは、FUN-ECMの活動内容と、ECMとはどのようなものかについて発信するために開設しました。</h3>
 
+                    <div class="tinpo">
+                        <ul class="topli">
+                            <li class="topli-a"><a href="ecm.html">ECMとは</a></li>
+                            <li class="topli-b"><a href="log.html">活動記録</a></li>
+                        </ul>
+
+                        <ul class="topli">
+                            <li class="topli-b"><a href="member.html">メンバー紹介</a></li>
+                            <li class="topli-a"><a href="unchi.html">リンク</a></li>
+                       </ul>
+                   </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -76,7 +88,7 @@
     <script src="js/bootstrap.min.js"></script>
 
     <!-- Menu Toggle Script -->
-<!--   <script>
+   <!--<script>
     $("#menu-toggle").click(function(e) {
         e.preventDefault();
         $("#wrapper").toggleClass("toggled");
