--- a/member.html
+++ b/member.html
@@ -29,7 +29,7 @@
 
 <body>
 
-    <div id="wrapper">
+    <div id="wrapper" class="padd">
 
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
@@ -57,12 +57,21 @@
 
         <!-- Page Content -->
         <div id="page-content-wrapper">
-            <div class="container-fluid">
+            <div class="soto container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>メンバー紹介</h1>
-                        <p>tekken</p>
-                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
+                        <h1 class="bg-primary">メンバー紹介</h1>
+                        <div class="name">
+                           <p class="member-image">
+                              <img src="gamine.jpg" class="left-">
+                           </p>
+                          <h2 class="left-"><mark>がみね<mark></h2>
+                        </div>
+                        <br><br>
+                        <h3 class="honbun">このプロジェクトたのしいさ</h3>
+                        <h4>twitter:
+                          <a href="https://twitter.com/gamine_39?lang=ja">@gamine_39</a>
+                        </h4>
                     </div>
                 </div>
             </div>
